# melange-pancake

./: .gitignore  Makefile  README.md  bsconfig.json  dune  dune-project  jest.config.js  melange-pancake.opam  package-lock.json  package.json  pancake.opam  postinstall.js  ppx
.github/: ppx.yaml
.github/workflows/: ppx-push.yaml  ppx.yaml
__tests__/: Lenses_arbitrary.re  Lenses_array.re  Lenses_basics.re  Lenses_composition.re  Lenses_lists.re  Lenses_option.re  Lenses_piping.re  Lenses_result.re  dune
dune.lock/: dune-build-info.pkg  lock.dune  melange-jest.pkg  melange.pkg  merlin-extend.pkg  ocaml-base-compiler.pkg  ocaml-compiler-libs.pkg  ocaml.pkg  ocamlfind.pkg  reason.pkg
esy.lock/: index.json
lib/: Lib.re  Pancake.re  Pancake__Lens.re  Pancake__Prism.re  dune
ppx/: Lens.re  dune
ppx_src/: dune  esy.json
ppx_src/esy.lock/: index.json
ppx_src/src/: Utils.re  dune
src/: Example.js  Example.re  Function.re  Lens.re  Lib.re  Pancake.js  Pancake.re  Pancake__Lens.re  Pancake__Prism.re  Prism_example.re  Test.js  Test.re  dune
test/: Lenses_array_test.re  Lenses_basics_test.re  Lenses_lists_test.re  Lenses_option_test.re  Lenses_path.re  Lenses_piping_test.re  Lenses_result_test.re  Prism_example.re  dune
