(lang dune 3.8)
(using melange 0.1)
(name pancake)
(license "MIT")
(maintainers <your_name>)
(authors <your_name>)
(homepage https://github.com/rolandpeelen/bs-pancake)
(bug_reports https://github.com/rolandpeelen/bs-pancake/issues)

(package
 (allow_empty)
 (name pancake)
 (synopsis "Pancake")
 (description "A tiny lens library"))
