opam-version: "2.0"
synopsis: "Pancake"
description: "A tiny lens library"
maintainer: ["Roland Peelen"]
authors: ["Roland Peelen"]
license: "MIT"
homepage: "https://github.com/rolandpeelen/bs-pancake"
bug-reports: "https://github.com/rolandpeelen/bs-pancake/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange-jest" {>= "0.1.0"}
  "melange" {>= "2.0.0"}
  "ppxlib" {>= "0.31.0"}
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/rolandpeelen/bs-pancake.git"
